--- a/pkg/config/testdata/clusters.yaml
+++ b/pkg/config/testdata/clusters.yaml
@@ -12,7 +12,7 @@ clusters:
       NO_PROXY: "@all"
       no_proxy: "@all"
     additionalArgs:
-      - --k3s-arg=--tls-san=k3d-dev-serverlb@server:*"
+      - "--k3s-arg=--tls-san=k3d-dev-serverlb@server:*"
       - --image=rancher/k3s:v1.26.4-rc1-k3s1
     labels:
       kubernetes.cnp.io/cluster.name: dev
@@ -32,7 +32,7 @@ clusters:
       NO_PROXY: "@all"
       no_proxy: "@all"
     additionalArgs:
-      - --k3s-arg=--tls-san=k3d-tst-serverlb@server:*"
+      - "--k3s-arg=--tls-san=k3d-tst-serverlb@server:*"
       - --image=rancher/k3s:v1.26.4-rc1-k3s1
     labels:
       kubernetes.cnp.io/cluster.name: tst
@@ -52,7 +52,7 @@ clusters:
       NO_PROXY: "@all"
       no_proxy: "@all"
     additionalArgs:
-      - --k3s-arg=--tls-san=k3d-qa-serverlb@server:*"
+      - "--k3s-arg=--tls-san=k3d-qa-serverlb@server:*"
       - --image=rancher/k3s:v1.26.4-rc1-k3s1
     labels:
       kubernetes.cnp.io/cluster.name: qa
@@ -79,5 +79,5 @@ clusters:
       NO_PROXY: "@all"
       no_proxy: "@all"
     additionalArgs:
-      - --k3s-arg=--tls-san=k3d-admin-serverlb@server:*"
+      - "--k3s-arg=--tls-san=k3d-admin-serverlb@server:*"
       - --image=rancher/k3s:v1.26.4-rc1-k3s1
