Paramaterize kubectl port-forward bind address

--- a/pkg/config/testdata/clusters.yaml
+++ b/pkg/config/testdata/clusters.yaml
@@ -66,6 +66,7 @@ clusters:
       namespace: argocd
       port: '8080'
       manifestPath: "./manifests/argo-cd/"
+      bindAddress: localhost
       credentials:
         username: admin
         password: admin1234
